--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,4 @@
-header {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,7 +6,7 @@ header {
     padding-block: 20px;
 }
 
-ul {
+.ul {
     display: flex;
     list-style-type: none;
     gap: 40px;
