--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,16 +1,45 @@
+/* utility */
+.flex {
+    display: flex;
+}
+
 .footer {
     background-image: url('../../public/img/footer-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
     display: flex;
 }
 
 .footerNav {
-    width: 50%;
+    width: auto;
     display: flex;
+    margin-block: 50px;
 }
 
-.footerImg {
-    height: 400px;
-    background: url('public/img/dc-logo-bg.png');
+.footerNav ul {
+    list-style-type: none;
+    margin-right: 70px;
 }
 
+.footerNav li {
+    color: gray;
+    margin-block: 15px;
+}
+
+.footerImgDiv {
+    width: fit-content;
+    height: 100%;
+    text-align: center;
+    margin-left: auto;
+}
+
+.footerImgDiv img {
+    transform: scale(1.3);
+}
+
+.postFooter {
+    background-color: rgb(69, 69, 69);
+    height: 100px;
+    width: 100%;
+}
